--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -9,6 +9,8 @@ body{
     margin-right: auto;
     border: solid;
     padding: 10px 10px 10px 10px;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
 }
 /**********************************************************************************************************************/
 
